[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/characters/Fumiko-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/state_machine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/actors/player/states/Move/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/actors/player/states/Move/Move.gd" type="Script" id=5]
[ext_resource path="res://src/actors/player/states/Move/Run.gd" type="Script" id=6]
[ext_resource path="res://src/actors/player/states/Move/Air.gd" type="Script" id=7]
[ext_resource path="res://src/actors/player/states/Attack.gd" type="Script" id=8]
[ext_resource path="res://src/actors/player/Camera2D.gd" type="Script" id=9]
[ext_resource path="res://src/actors/player/states/Hurt.gd" type="Script" id=10]
[ext_resource path="res://assets/characters/swoosh.png" type="Texture" id=11]
[ext_resource path="res://src/actors/player/states/Dead.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 15 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.75
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 15 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7, 15 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 4, -1 )
vframes = 5
hframes = 3
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/attack = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false
collision_layer = 0
collision_mask = 4

[node name="AttackSprite" type="Sprite" parent="AttackArea"]
visible = false
position = Vector2( 9, -1 )
texture = ExtResource( 11 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 19, 0 )
shape = SubResource( 8 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="HurtTime" type="Timer" parent="StateMachine/Hurt"]
one_shot = true

[node name="Tween" type="Tween" parent="StateMachine/Hurt"]

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 64 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 0.63
editor_draw_drag_margin = true
script = ExtResource( 9 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource( 9 )
[connection signal="timeout" from="StateMachine/Hurt/HurtTime" to="StateMachine/Hurt" method="_on_HurtTime_timeout"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
